# android-draft

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/cn/lanthing/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/audio/capturer/: audio_capturer.h
app/src/main/cpp/audio/player/: audio_player.cpp  audio_player.h  sl_audio_player.cpp  sl_audio_player.h
app/src/main/cpp/capi/: lanthing.cpp
app/src/main/cpp/client/: jvm_client_proxy.cpp  jvm_client_proxy.h  native_client.cpp  native_client.h
app/src/main/cpp/graphics/: types.h
app/src/main/cpp/graphics/decoder/: ndk_video_decoder.cpp  ndk_video_decoder.h  video_decoder.cpp  video_decoder.h
app/src/main/cpp/graphics/drpipeline/: video_decode_render_pipeline.cpp  video_decode_render_pipeline.h
app/src/main/cpp/graphics/renderer/: android_dummy_renderer.cpp  android_dummy_renderer.h  android_gl_pipeline.cpp  android_gl_pipeline.h  video_renderer.cpp  video_renderer.h
app/src/main/cpp/graphics/widgets/: widgets_manager.cpp  widgets_manager.h
app/src/main/cpp/ltlib/: CMakeLists.txt
app/src/main/cpp/ltlib/include/ltlib/: logging.h  threads.h  times.h
app/src/main/cpp/ltlib/src/: logging.cpp  threads.cpp  times.cpp
app/src/main/cpp/transport/: .gitignore  CMakeLists.txt
app/src/main/cpp/transport/src/: transport_dummy.cpp
app/src/main/java/cn/lanthing/: MainActivity.kt
app/src/main/java/cn/lanthing/activity/main/: MainActivity.kt  MainUI.kt
app/src/main/java/cn/lanthing/activity/stream/: StreamActivity.kt
app/src/main/java/cn/lanthing/codec/: LtCodec.java  Protocol.java
app/src/main/java/cn/lanthing/ltmsdk/: LtClient.kt  RenderTexture.kt
app/src/main/java/cn/lanthing/net/: SocketClient.kt
app/src/main/java/cn/lanthing/stream/: StreamActivity.kt
app/src/main/java/cn/lanthing/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: integers.xml  strings.xml
app/src/test/java/cn/lanthing/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
